# Godec

./: .travis.yml  CMakeLists.txt  Changelog.md  LICENSE  README.md  centos7_build.sh
doc/: Building.md  CMakeLists.txt  CoreComponents.md  Details.md  Development.md  GenDoc.pl  Profiling.md  UsingGodec.md
java/: .project  CMakeLists.txt  README.md  pom.xml
java/godec/: pom.xml
java/godec/src/main/java/com/bbn/godec/: AudioDecoderMessage.java  BinaryDecoderMessage.java  ChannelClosedException.java  ConversationStateDecoderMessage.java  DecoderMessage.java  FeaturesDecoderMessage.java  Godec.java  GodecJsonOverrideElement.java  GodecJsonOverrides.java  GodecPullEndpoints.java  GodecPushEndpoints.java  JsonDecoderMessage.java  Matrix.java  NbestDecoderMessage.java  NbestEntry.java  Vector.java
java/godec/src/main/java/com/bbn/godec/examples/: SimpleOfflineASRCmd.java  SimpleStreamingASRCmd.java
java/godec/src/main/java/com/bbn/godec/regression/: JNITest.java  TextTransform.java
java/godec/src/main/java/com/bbn/godec/server/: GodecFrontend.java  GodecServer.java  PasswordTool.java
java/godec/src/main/java/com/bbn/godec/utils/: SimpleASR.java
misc/: astyle  astylerc  installGitHook.sh  pre-commit  run_astyle.sh
src/: ChannelMessenger.cc  ComponentGraph.cc  HelperFuncs.cc  TimeStream.cc  godec.cpp
src/core_components/: AccumCovariance.cc  AccumCovariance.h  ApiEndpoint.cc  ApiEndpoint.h  AudioPreProcessor.cc  AudioPreProcessor.h  Average.cc  Average.h  CMakeLists.txt  Energy.cc  Energy.h  FeatureMerger.cc  FeatureMerger.h  FeatureNormalizer.cc  FeatureNormalizer.h  FileFeeder.cc  FileFeeder.h  FileWriter.cc  FileWriter.h  GodecMessages.cc  GodecMessages.h  Java.cc  Java.h  MatrixApply.cc  MatrixApply.h  Merger.cc  Merger.h  NoiseAdd.cc  NoiseAdd.h  PythonComponent.cc  PythonComponent.h  Router.cc  Router.h  SoundcardPlayback.cc  SoundcardPlayback.h  SoundcardRecorder.cc  SoundcardRecorder.h  SubModule.cc  SubModule.h  Subsample.cc  (+6 more)
src/include/godec/: ChannelMessenger.h  ComponentGraph.h  HelperFuncs.h  Router.h  TimeStream.h  channel.h
test/: android.test  android_test.json  jni.test  jni_test.json  python.test  python_test.json  python_test.npz  python_test.npz_keys  python_test.py  python_test_compare_matrix.py  resample.test  resample_sub.json  resample_test.json  run_tests.sh
test/data/: resample.analist
test/python_dummy_module/: dummy_module.py
tools/: AnalyzeLatency.pl  AnalyzeLatency.py  Json2Graph.py  env.sh
